# Theoretical-foundations-of-computer-graphics-and-computational-optics

./: .gitignore  README.md
course/: Cargo.toml  demo.shp  demo.txt  install_requirements.sh
course/course/: Sphere.h  main.cpp
course/course.xcodeproj/: project.pbxproj
course/course.xcodeproj/project.xcworkspace/xcuserdata/pugalol.xcuserdatad/: UserInterfaceState.xcuserstate
course/docs/: токгиво_курсовая_отчёт.pages
course/src/: camera.rs  extended_math.rs  light.rs  main.rs  material.rs  polygon.rs  ray.rs  scene.rs  utils.rs  vec3.rs
course/src/geom_loaders/: mod.rs  shp_loader.rs
course/src/lights/: ambient_light.rs  directional_light.rs  mod.rs  point_light.rs  ray.rs
lab1-19.09.22/: New Scene_ObserverNode_prop.txt  lab1-19.09.22.py  токгиво_лаб1_отчёт.docx
lab2-02.10.22/: analitical.py  lab2-02.10.22.iof  lab2-02.10.22.obsres  lab2-02.10.22.py  lab2-02.10.22.txt  simple_example.gcx  solution.xlsx  spectral_pink.spd  vis_func.xlsx  лр_02_ТОКГиВО.docx  токгиво_лаб2_отчёт.docx
lab3-18.10.22/: lab3-18.10.22.iof  lab3-18.10.22.py  lab3-18.10.22.xlsx  spectral_pink.spd  лр_03_ТОКГиВО.docx  токгиво_лаб3_отчёт.docx
lab4-25.10.22/: illuminance-OUT.nit  illuminance.nit  lab4-25.10.22  lab4-25.10.22.py  лр_04_ТОКГиВО.docx  токгиво_лаб4_отчёт.docx
lab4-25.10.22/debug/: debug-OUT.nit  debug.nit  debug.txt
lab5-26.11.22/: first_ray_trace.numbers  lab5-26.11.22.py  Глубина_резкости.numbers  лр_05_ТОКГиВО.docx  токгиво_лаб5_отчёт.docx  токгиво_лаб5_отчёт.pages
lab5-26.11.22/docs/: depth of field.numbers  first_ray_trace.numbers
(+21 files in other folders)
