[package]
name = "raygine"
version = "1.0.0"
edition = "2021"
authors = ["https://github.com/testpassword"]
description = "Simple reverse ray tracing renderer. Support SHP format for geometry."
repository = "https://github.com/testpassword/Theoretical-foundations-of-computer-graphics-and-computational-optics/tree/master/course"
keywords = ["graphics"]

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.6.0"
image = "0.24.5"
